# gtk4_osx_skeleton

./: .gitignore  Cargo.toml  README.md  build.sh
src/: main.rs
src/gui/: mod.rs  styles.css
